# GameOfLife

./: .gitmodules  CMakeLists.txt
src/: engine.cpp  engine.h  eventHandler.cpp  eventHandler.h  main.cpp  pattern.txt  renderer.cpp  renderer.h
